[package]
name = "flexor"
version = "1.0.0"
authors = ["The ChromiumOS Authors"]
edition = "2021"

[dependencies]
anyhow = "1.0"
gpt_disk_io = { version = "0.15.0", features = ["std"] }
gpt_disk_types = "0.15.0"
libchromeos = { path = "../libchromeos-rs" } # provided by ebuild
vboot_reference-sys = { path = "../../platform/vboot_reference/rust/vboot_reference-sys" } # provided by ebuild
log = "0.4.20"
nix = "0.23"
stderrlog = "0.5.0"
tempfile = "3.0"
